tests/negative/symbols/use_undef2.orng
fn main() -> Int {
    let x: Int = undefined
    4 + x
}